# workshop-04-airflow

./: .gitignore  Dockerfile  README.md  exemplo_00.py  exemplo_01.py  exemplo_02.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: api_to_postgres.py  dag_exemplo_01.py  dag_exemplo_02.py  dag_exemplo_03.py  main.py
include/: controller.py  db.py  models.py  schema.py
