[tool.poetry]
name = "workshop-04-airflow"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = "^0.7.2"
requests = "^2.31.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
apache-airflow = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
